--- a/AUTHORS
+++ b/AUTHORS
@@ -3,6 +3,7 @@ Authors of rcssserver3D:
 Marco Kögler <koegler@uni-koblenz.de>
 Markus Rollmann <rollmark@uni-koblenz.de>
 Oliver Obst <fruit@uni-koblenz.de>
+Pat Riley <pfr@cs.cmu.edu>
 Tom Howard <tomhoward@users.sf.net>
 Heni Ben Amor <amor@uni-koblenz.de>
 
