*** empty log message ***

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2004-02-11  Oliver Obst  <fruit@robolog.org>
+
+	* released rcssserver3D-0.2
+
 2004-02-10  Markus Rollmann  <rollmark@uni-koblenz.de>
 
 	* plugin/soccer/soccerbase/soccerbase.cpp:
